--- a/oauth2/pom.xml
+++ b/oauth2/pom.xml
@@ -8,7 +8,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>oauth2</artifactId>
-
+    <url>https://github.com/entur/rutebanken-helpers</url>
     <dependencies>
 
         <dependency>
