--- a/oauth2/pom.xml
+++ b/oauth2/pom.xml
@@ -8,6 +8,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>oauth2</artifactId>
+    <name>oauth2</name>
     <description>oauth2 helper library</description>
     <url>https://github.com/entur/rutebanken-helpers</url>
     <dependencies>
