--- a/permission-store-proxy/pom.xml
+++ b/permission-store-proxy/pom.xml
@@ -19,7 +19,7 @@
     <parent>
         <groupId>org.entur.ror.helpers</groupId>
         <artifactId>helper</artifactId>
-        <version>5.37.0-SNAPSHOT</version>
+        <version>5.39.0-SNAPSHOT</version>
     </parent>
 
     <properties>
@@ -38,13 +38,18 @@
         <dependency>
             <groupId>org.entur.ror.helpers</groupId>
             <artifactId>organisation</artifactId>
-            <version>5.37.0-SNAPSHOT</version>
+            <version>5.39.0-SNAPSHOT</version>
         </dependency>
 
         <dependency>
             <groupId>org.entur.ror.helpers</groupId>
             <artifactId>oauth2</artifactId>
-            <version>5.37.0-SNAPSHOT</version>
+            <version>5.39.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.ben-manes.caffeine</groupId>
+            <artifactId>caffeine</artifactId>
         </dependency>
 
         <!--test-->
