--- a/stopplace-changelog/pom.xml
+++ b/stopplace-changelog/pom.xml
@@ -92,7 +92,7 @@
                         </goals>
                         <configuration>
                             <sourceDirectory>${project.basedir}/src/main/avro/</sourceDirectory>
-                            <outputDirectory>${project.basedir}/src/main/java/</outputDirectory>
+                            <outputDirectory>${project.basedir}/target/generated-sources</outputDirectory>
                         </configuration>
                     </execution>
                 </executions>
