--- a/stopplace-changelog/pom.xml
+++ b/stopplace-changelog/pom.xml
@@ -7,6 +7,7 @@
         <groupId>org.entur.ror.helpers</groupId>
         <artifactId>helper</artifactId>
         <version>5.41.0-SNAPSHOT</version>
+        <relativePath>..</relativePath>
     </parent>
 
     <artifactId>stopplace-changelog</artifactId>
