--- a/stopplace-changelog-starter/pom.xml
+++ b/stopplace-changelog-starter/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.entur.ror.helpers</groupId>
         <artifactId>helper</artifactId>
-        <version>5.43.0</version>
+        <version>5.43.0-SNAPSHOT</version>
         <relativePath>..</relativePath>
     </parent>
 
