--- a/pom.xml
+++ b/pom.xml
@@ -195,6 +195,9 @@
                         </signing>
                         <deploy>
                             <maven>
+                                <pomchecker>
+                                    <strict>false</strict>
+                                </pomchecker>
                                 <mavenCentral>
                                     <sonatype>
                                         <active>RELEASE</active>
