--- a/stopplace-changelog/pom.xml
+++ b/stopplace-changelog/pom.xml
@@ -64,6 +64,13 @@
         </dependency>
     </dependencies>
 
+    <repositories>
+        <repository>
+            <id>confluent</id>
+            <url>https://packages.confluent.io/maven/</url>
+        </repository>
+    </repositories>
+
     <build>
         <plugins>
             <plugin>
